--- a/es/contact-es.html
+++ b/es/contact-es.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hermosillo 2026</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/favicon.png" type="image/png">
     <style>
         :root{
             --green: rgb(50, 140, 45);
@@ -134,15 +134,15 @@
     <header>
         <div class="header-left">
             <div class="logo">
-                <img src="Fotos/Logo/expo.svg" alt="Logo">
+                <img src="../Fotos/Logo/expo.svg" alt="Logo">
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="snactiv">HOME</a></li>
-                    <li><a href="history.html" class="snactiv">HISTORY OF SONORA</a></li>
-                    <li><a href="tourism.html" class="snactiv">TOURISM</a></li>
-                    <li><a href="links.html" class="snactiv">LINKS</a></li>
-                    <li><a href="contact.html" class="active">CONTACT</a></li>
+                    <li><a href="/es/index-es.html" class="snactiv">HOME</a></li>
+                    <li><a href="/es/history-es.html" class="snactiv">HISTORIA DE SONORA</a></li>
+                    <li><a href="/es/tourism-es.html" class="snactiv">TURISMO</a></li>
+                    <li><a href="/es/links-es.html" class="snactiv">LINKS</a></li>
+                    <li><a href="/es/contact-es.html" class="active">CONTACTA CON NOSOTROS</a></li>
                 </ul>
             </nav>
         </div>
@@ -163,48 +163,48 @@
     </script>
  <div class="content-wrapper">
      <!-- Sección Our Team -->
-     <h2 style="text-align:center;">Our Team</h2>
+     <h2 style="text-align:center;">Nuestro Equipo</h2>
 
      <div class="container-our">
          <div class="card-our">
              <div class="profile-image">
-                 <img src="Fotos/pfp.png" alt="DEFAULT PHOTO">
+                 <img src="../Fotos/pfp.png" alt="DEFAULT PHOTO">
              </div>
              <div class="info">
                  <h3>Juan Cabuto</h3>
-                 <p>Head Organizer</p>
+                 <p>Organizadora Principal</p>
                  <a href="#" target="_blank">
-                     Find out more <span>&#10140;</span>
+                    Descubra más <span>&#10140;</span>
                  </a>
              </div>
          </div>
          <div class="card-our">
              <div class="profile-image">
-                 <img src="Fotos/pfp.png" alt="default photo">
+                 <img src="../Fotos/pfp.png" alt="default photo">
              </div>
              <div class="info">
                  <h3>Bo Golson</h3>
-                 <p>Public Outreach</p>
+                 <p>Divulgación Pública</p>
                  <a href="#" target="_blank">
-                     Find out more <span>&#10140;</span>
+                    Descubra más <span>&#10140;</span>
                  </a>
              </div>
          </div>
          <div class="card-our">
              <div class="profile-image">
-                 <img src="Fotos/pfp.png" alt="default photo">
+                 <img src="../Fotos/pfp.png" alt="default photo">
              </div>
              <div class="info">
                  <h3>Jonathan Rodriguez</h3>
-                 <p>Head of Technology</p>
+                 <p>Jefe de Tecnología</p>
                  <a href="#" target="_blank">
-                     Find out more <span>&#10140;</span>
+                    Descubra más <span>&#10140;</span>
                  </a>
              </div>
          </div>
  
        
-         <h3>For updates please follow our Facebook page!</h3>
+         <h3>¡Para actualizaciones siga nuestra página de Facebook!</h3>
    
  
          
@@ -227,11 +227,11 @@
 </body>
 
 <footer>
-    <h1>Social Networks</h1>
+    <h1>Redes Sociales</h1>
     <div class="redes">
         <!--insert social media link-->
-        <a href="https://www.linkedin.com/company/virtual-space-llc/"><img src="images/RS-02.png" alt=""></a>
-        <a href="https://www.facebook.com/VirtualSpaceLLC/"><img src="images/RS-03.png" alt=""></a>
+        <a href="https://www.linkedin.com/company/virtual-space-llc/"><img src="../images/RS-02.png" alt=""></a>
+        <a href="https://www.facebook.com/VirtualSpaceLLC/"><img src="../images/RS-03.png" alt=""></a>
     </div>
     <p>Virtual Space LLC All Rights Reserved © 2025 </p><br>
 </footer>
