--- a/es/index-es.html
+++ b/es/index-es.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hermosillo 2026</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/loading.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/loading.css">
+    <link rel="icon" href="../images/favicon.png" type="image/png">
 </head>
 <style>
     h2{
@@ -20,7 +20,7 @@
 
   <!-- Pantalla de carga con el logo -->
   <div id="loading-screen">
-    <img src="Fotos/Logo/expo.svg" alt="Logo" id="logo"> <!-- Reemplaza con tu logo -->
+    <img src="../Fotos/Logo/expo.svg" alt="Logo" id="logo"> <!-- Reemplaza con tu logo -->
   </div>
 
   <!-- Contenido de la página -->
@@ -28,15 +28,15 @@
     <header>
         <div class="header-left">
             <div class="logo">
-                <img src="Fotos/Logo/expo.svg">
+                <img src="../Fotos/Logo/expo.svg">
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">HOME</a></li>
-                    <li><a href="history.html" class="snactiv">HISTORY OF SONORA</a></li>
-                    <li><a href="tourism.html" class="snactiv">TOURISM</a></li>
-                    <li><a href="links.html" class="snactiv">LINKS</a></li>
-                    <li><a href="contact.html" class="snactiv">CONTACT</a></li>
+                    <li><a href="/es/index-es.html" class="active">HOME</a></li>
+                    <li><a href="/es/history-es.html" class="snactiv">HISTORIA DE SONORA</a></li>
+                    <li><a href="/es/tourism-es.html" class="snactiv">TURISMO</a></li>
+                    <li><a href="/es/links-es.html" class="snactiv">LINKS</a></li>
+                    <li><a href="/es/contact-es.html" class="snactiv">CONTACTA CON NOSOTROS</a></li>
                 </ul>
             </nav>
         </div>
@@ -61,47 +61,47 @@
     <iframe id="myVideo" class="video-fullwidth" width="2000" height="3150" src="https://www.youtube.com/embed/1eJ0TWaVzIQ?si=w_L5ioIwXVdwbEK8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
     <div class="description">
-        <h1>Welcome to the XXIX Convencion de FerroModelistas y Ferroaficionados de la Republica Mexicana - Hermosillo 2026</h1>
-        <p>Every year a convention is held in selected cities in the Mexican Republic and this year it is in Hermosillo, Sonora! You will have the opportunity to learn another side of Mexican History. Learn about the Impact that Railroads had in the state of Sonora! From the pioneering days of the Sonora Railway to the Sud Pacifico de Mexico to Ferrocarril Del Pacifico, Ferrocarril Sonora Baja California to Ferromex. Learn how mining and revolution shaped Sonora History </p>
+        <h1>Bienvenidos a la XXIX Convención de FerroModelistas y Ferroaficionados de la República Mexicana - Hermosillo 2026</h1>
+        <p>Cada año se celebra una convención en ciudades seleccionadas de la República Mexicana, ¡y este año es en Hermosillo, Sonora! Tendrás la oportunidad de conocer otra faceta de la historia mexicana. ¡Aprende sobre el impacto de los ferrocarriles en el estado de Sonora! Desde los inicios del Ferrocarril de Sonora hasta el Ferrocarril del Pacífico Sur de México, el Ferrocarril del Pacífico, el Ferrocarril Sonora Baja California y Ferromex. Descubre cómo la minería y la revolución moldearon la historia de Sonora.</p>
         <br>
         <h2>Poster Submissions</h2>
-        <p>Do you have a passion for Railroads? Do you like Railroad History? Are you a Railfan? A Modeler?   Want to Participate? The Convention is looking for participants to submit posters to be presented in the exhibit hall! Please contact us to learn more to follow our guidelines</p>
+        <p>¿Te apasionan los ferrocarriles? ¿Te gusta la historia del ferrocarril? ¿Eres aficionado a los ferrocarriles? ¿Te gusta el modelismo? ¿Te gustaría participar? ¡La Convención busca participantes que envíen carteles para presentarlos en la sala de exposiciones! Contáctanos para obtener más información y cumplir con nuestras normas.</p>
         <br>
 
 
         <h2>Agenda</h2>
         <div class="agenda">
-            <h3>Thursday  6 of August  </h3>
+            <h3>Jueves 6 de Agosto</h3>
             <p>
-                Hotel Playa de Cortes
+                Hotel Playa de Cortés
                 <br>
-                Luis Encinas S/N, Miramar, 85450 Guaymas, Son., Mexico
+                Luis Encinas S/N, Miramar, 85450 Guaymas, Son., México
                 <br>
                 Museo Ferrocarrilero
                 <br>
-                C. Niños Heroes, Moderna, 85300 Empalme, Son., Mexico              
+                C. Niños Héroes, Moderna, 85300 Empalme, Son., México              
             </p>
 
             <br>
 
-            <h3>Friday 7 of August</h3>
-            <p>Presentations, Exhibit Hall</p>
+            <h3>Viernes 7 de Agosto</h3>
+            <p>Presentaciones, Sala de Exposiciones</p>
             <br>
 
 
-            <h3>Saturday 8 of August</h3>
-            <p>Museo del Ferrocarril. Benjamin Hill, Sonora </p>
+            <h3>Sábado 8 de Agosto</h3>
+            <p>Museo del Ferrocarril. Benjamín Hill, Sonora</p>
             <br>
 
 
-            <h3>Sunday 9 of August</h3>
-            <p>Closing Presentations</p>
+            <h3>Domingo 9 de Agosto</h3>
+            <p>Presentaciones de Clausura</p>
             <br>
         </div>
 
 
 
-        <h2>Nearby Hotels</h2>
+        <h2>Hoteles</h2>
         <div class="hotels">
             <div class="hotel-description">
                  <p>
@@ -125,11 +125,11 @@
             </div>
  
     <footer>
-        <h1>Social Networks</h1>
+        <h1>Redes Sociales</h1>
         <div class="redes">
             <!--insert social media link-->
-            <a href="https://www.linkedin.com/company/virtual-space-llc/"><img src="images/RS-02.png" alt=""></a>
-            <a href="https://www.facebook.com/VirtualSpaceLLC/"><img src="images/RS-03.png" alt=""></a>
+            <a href="https://www.linkedin.com/company/virtual-space-llc/"><img src="../images/RS-02.png" alt=""></a>
+            <a href="https://www.facebook.com/VirtualSpaceLLC/"><img src="../images/RS-03.png" alt=""></a>
         </div>
         <p>Virtual Space LLC All Rights Reserved © 2025 </p><br>
     </footer>
