--- a/es/links-es.html
+++ b/es/links-es.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hermosillo 2026</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/favicon.png" type="image/png">
     <style>
        body{
         text-align: center;
@@ -49,15 +49,15 @@
     <header>
         <div class="header-left">
             <div class="logo">
-                <img src="Fotos/Logo/expo.svg" alt="Logo">
+                <img src="../Fotos/Logo/expo.svg" alt="Logo">
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="snactiv">HOME</a></li>
-                    <li><a href="history.html" class="snactiv">HISTORY OF SONORA</a></li>
-                    <li><a href="tourism.html" class="snactiv">TOURISM</a></li>
-                    <li><a href="links.html" class="active">LINKS</a></li>
-                    <li><a href="contact.html" class="snactiv">CONTACT</a></li>
+                    <li><a href="/es/index-es.html" class="snactiv">HOME</a></li>
+                    <li><a href="/es/history-es.html" class="snactiv">HISTORIA DE SONORA</a></li>
+                    <li><a href="/es/tourism-es.html" class="snactiv">TURISMO</a></li>
+                    <li><a href="/es/links-es.html" class="active">LINKS</a></li>
+                    <li><a href="/es/contact-es.html" class="snactiv">CONTACTA CON NOSOTROS</a></li>
                 </ul>
             </nav>
         </div>
@@ -77,18 +77,18 @@
  <div class="content-wrapper">
 
     <div class="links">
-        <h1>Our Contributers</h1>
+        <h1>Nuestros Colaboradores</h1>
         <br>
 
         <div class="sponsor">
             
-            <img src="Fotos/Logo/VS.png" alt="Virtual Space LLC Logo" class="logo" id="vslogo">
+            <img src="../Fotos/Logo/VS.png" alt="Virtual Space LLC Logo" class="logo" id="vslogo">
             <br>
             <a href="https://www.virtualspacellc.com/"><h2>Virtual Space LLC &#8594;</h2></a>
         </div>
         <div class="sponsor">
             
-            <img src="Fotos/Logo/Mexlist.png" alt="Mexlist Logo" class="logo" id="mexlogo">
+            <img src="../Fotos/Logo/Mexlist.png" alt="Mexlist Logo" class="logo" id="mexlogo">
             <br>
             <a href="https://mexlist.com/"><h2>Mexlist &#8594;</h2></a>
         </div>
@@ -99,13 +99,13 @@
 
 <!--Footer-->
 <footer>
-    <h1>Social Networks</h1>
+    <h1>Redes Sociales</h1>
     <div class="redes">
         <!--insert social media link-->
-        <a href="https://www.linkedin.com/company/virtual-space-llc/"><img src="images/RS-02.png" alt=""></a>
-        <a href="https://www.facebook.com/VirtualSpaceLLC/"><img src="images/RS-03.png" alt=""></a>
+        <a href="https://www.linkedin.com/company/virtual-space-llc/"><img src="../images/RS-02.png" alt=""></a>
+        <a href="https://www.facebook.com/VirtualSpaceLLC/"><img src="../images/RS-03.png" alt=""></a>
     </div>
-    <p>Virtual Space LLC All Rights Reserved © 2025 </p><br>
+    <p> Designed by Virtual Space LLC All Rights Reserved © 2025 </p><br>
 </footer>
 
 </html>
